# CircuitPython_thingsboard-client-sdk

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.rst  README.rst.license  network_adapter.py  pyproject.toml  requirements.txt  ruff.toml  tb_device_mqtt.py  thingsboard-client-sdk.py
.github/workflows/: release_gh.yml
docs/_static/: logo.png.license
examples/: attribute_requests.py  attribute_update.py  device_claiming_pe_only.py  rpc_example.py  send_telemetry.py  thingsboard-client-sdk_simpletest.py
examples/smart_weather_device/: font5x8.bin.license  smart_weather_device.py  smart_weather_system.json  smart_weather_system.json.license
thingsboard_sdk/: provision_client.py  tb_device_mqtt.py
