# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2026 Vitalii Bidochka for ThingsBoard Inc.
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-thingsboard-client-sdk"
description = "ThingsBoard CircuitPython client SDK"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "ThingsBoard Inc.", email = "vitalikbidochka@gmail.com"}
]
urls = {Homepage = "https://github.com/samson0v/CircuitPython_thingsboard-client-sdk"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "thingsboard-client-sdk",
    "thingsboard",
    "iot",
    "mqtt",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["thingsboard-client-sdk"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
